[package]
name = "pcd-acm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hl7 = "0.0.2"
uuid = {version = "1.7.0", features = ["v4"]}
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0.113"
chrono = "0.4.33"
ctrlc = "3.4.2"


[[bin]]
name = "alert_manager"
path = "bin/alert_manager.rs"

[[bin]]
name = "alert_reporter"
path = "bin/alert_reporter.rs"